# x86-63

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: pages.yml
apps/web/: index.html  package.json  vite.config.ts
apps/web/scripts/: wasm-smoke.mjs
apps/web/src/: App.tsx  styles.css  types.ts
course-content/: README.md
course-content/lecture3/: first.s  firstadd.s  firstfixed.s  firstsub.s
course-content/lecture4/: addArray1.s  addArray2.s  addArray3.s  addArray4.s  addGlobal.s  addGlobalBetter.s  addGlobalLea.s  cmp1.s  hello.s  sumLoop.s  sumLoopB.s
course-content/lecture5/: echo.s  fun1.s  fun2.s  funStack.s  helloRet.s  routine.s
course-content/lecture6/: fact.s  factTrace.s  readInt.s  readWriteTest.s  sumLoopArray.s  writeInt.s
crates/x86-63-cli/: Cargo.toml
crates/x86-63-cli/src/: display.rs  main.rs  repl.rs  tui.rs
crates/x86-63-core/: Cargo.toml
crates/x86-63-core/src/: diagnostic.rs  lib.rs  machine.rs  parser.rs  program.rs  protocol.rs  repl.rs  session.rs
crates/x86-63-core/tests/: course_lecture3.rs  course_lecture4.rs  course_lecture5.rs  course_lecture6.rs
crates/x86-63-course/: Cargo.toml
crates/x86-63-course/src/: lib.rs
crates/x86-63-wasm/: Cargo.toml
crates/x86-63-wasm/src/: lib.rs
docs/: course-subset.md  product-design.md  student-tutorial.md
scripts/: build-wasm.sh  differential-lecture4.sh  differential-lecture5.sh  differential-lecture6.sh
