[workspace]
resolver = "2"
members = [
    "crates/x86-63-core",
    "crates/x86-63-course",
    "crates/x86-63-cli",
    "crates/x86-63-wasm",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
console_error_panic_hook = "0.1"
crossterm = "0.29"
ratatui = "0.30.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
