[package]
name = "x86-63-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "x86-63"
path = "src/main.rs"

[dependencies]
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde_json.workspace = true
x86-63-core = { path = "../x86-63-core" }
x86-63-course = { path = "../x86-63-course" }
