[package]
name = "x86-63-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
x86-63-core = { path = "../x86-63-core" }
x86-63-course = { path = "../x86-63-course" }
